src/assets/scss/SinglePortfolioPage.module.scss
@import './global';
@import './variables';

.page {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: $orange;
  border-radius: 1rem;
  height: 100%;
  aspect-ratio: 3/4;
  filter: drop-shadow(0 0.2rem 0.7rem $light-shadow);
  transition: all 300ms ease-in-out;

  h2 {
    transition: all 300ms ease-in-out;
    color: $darkgrey;
    font-size: 2rem;
    font-weight: bold;
    position: absolute;
  }
}

@media screen and (max-width: 1600px) {
  .page {
    h2 {
      font-size: 1.5rem;
    }
  }
}

@media screen and (max-width: 992px) {
  .page {
    width: 100%;
    height: unset;
    aspect-ratio: 32/9;
    -webkit-tap-highlight-color: transparent;

    h2 {
      font-size: 2rem;
    }
  }
}

@media screen and (max-width: 576px) {
  .page {
    h2 {
      font-size: 1.5rem;
    }
  }
}

